small update of barostat

--- a/Production/NPAT_production_unrestrained.ipynb
+++ b/Production/NPAT_production_unrestrained.ipynb
@@ -206,7 +206,7 @@
    "source": [
     "#Add a barostat with a surface tension\n",
     "system.addForce(mm.MonteCarloAnisotropicBarostat(\n",
-    "    [0, 0, 1000]*unit.bar,\n",
+    "    [0, 0, 1]*unit.atmosphere,\n",
     "    100*unit.kelvin,\n",
     "    False,\n",
     "    False,\n",
@@ -235,8 +235,8 @@
    "source": [
     "#loads checkpoint if exists\n",
     "simulation_eq = app.Simulation(psf.topology, system, integrator_eq, platform, properties)\n",
-    "if os.path.exists('/scratch/htc/fsafarov/traj/checkpoint_pr_npat_unr.chk'):\n",
-    "    simulation_eq.loadCheckpoint('/scratch/htc/fsafarov/traj/checkpoint_pr_npat_unr.chk')\n",
+    "if os.path.exists('/scratch/htc/fsafarov/traj/checkpoint_pr_nvt_final_2.chk'):\n",
+    "    simulation_eq.loadCheckpoint('/scratch/htc/fsafarov/traj/checkpoint_pr_nvt_final_2.chk')\n",
     "else:\n",
     "    simulation_eq.context.setPositions(centered_positions)\n",
     "    box_vectors = psf.topology.getPeriodicBoxVectors()\n",
@@ -282,9 +282,9 @@
     "# # print(steps_per_microsecond)\n",
     "# simulation_eq.reporters.append(app.StateDataReporter('/scratch/htc/fsafarov/traj/output_membrane_barostat_2.log', 1000, step=True, potentialEnergy=True, temperature=True))\n",
     "\n",
-    "simulation_eq.reporters.append(app.DCDReporter('/scratch/htc/fsafarov/traj/trajectory_pr_npat_unr.dcd', 10000, enforcePeriodicBox=True))\n",
-    "simulation_eq.reporters.append(app.CheckpointReporter('/scratch/htc/fsafarov/traj/checkpoint_pr_npat_unr.chk', 100000))\n",
-    "simulation_eq.step(25000000)\n"
+    "simulation_eq.reporters.append(app.DCDReporter('/scratch/htc/fsafarov/traj/trajectory_1_pr_npat_unr.dcd', 10000, enforcePeriodicBox=True))\n",
+    "simulation_eq.reporters.append(app.CheckpointReporter('/scratch/htc/fsafarov/traj/checkpoint_1_pr_npat_unr.chk', 100000))\n",
+    "simulation_eq.step(50000000)\n"
    ]
   },
   {
